RESOLVED FIXED18204
SquirrelFish: continue/break do not correctly handle scope popping
https://bugs.webkit.org/show_bug.cgi?id=18204
Summary SquirrelFish: continue/break do not correctly handle scope popping
Oliver Hunt
Reported 2008-03-28 20:49:17 PDT
while(1) with(..) continue; Eventually blows up due to only ever pushing onto the stack, and never popping
Attachments
Fixeration! (7.73 KB, patch)
2008-03-28 20:55 PDT, Oliver Hunt
mjs: review+
Oliver Hunt
Comment 1 2008-03-28 20:55:40 PDT
Created attachment 20181 [details] Fixeration!
Maciej Stachowiak
Comment 2 2008-03-28 21:24:33 PDT
Comment on attachment 20181 [details] Fixeration! r=me
Oliver Hunt
Comment 3 2008-03-28 21:31:00 PDT
Landed r31430
Note You need to log in before you can comment on or make changes to this bug.