Bug 18204: SquirrelFish: continue/break do not correctly handle scope popping <http://bugs.webkit.org/show_bug.cgi?id=18204>

Reviewed by Maciej.

We now track the scope depth as part of a loop context, and add an
extra instruction op_jump_scopes that is used to perform a jump across
dynamic scope boundaries.


git-svn-id: http://svn.webkit.org/repository/webkit/branches/squirrelfish@31430 268f45cc-cd09-0410-ab3c-d52691b4dbfc